--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react": ">17.0.0"
   },
   "devDependencies": {
-    "microbundle-crl": "^0.13.11",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
@@ -41,11 +40,14 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^3.2.3",
+    "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "node-sass": "^6.0.1",
+    "sass": "^1.42.1"
   },
   "files": [
     "dist"
