--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^3.2.3",
     "microbundle-crl": "^0.13.11",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "node-sass": "^6.0.1",
     "sass": "^1.42.1"
   },
   "files": [
