--- a/example/package.json
+++ b/example/package.json
@@ -10,10 +10,17 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
+    "bootstrap": "^4.3.1",
+    "node-sass": "^6.0.1",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "file:../node_modules/react-scripts",
-    "react-selection-box": "file:.."
+    "react-selection-box": "file:..",
+    "redux": "^4.1.1",
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
