--- a/example/package.json
+++ b/example/package.json
@@ -19,8 +19,10 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "file:../node_modules/react-scripts",
     "react-selection-box": "file:..",
+    "react-syntax-highlighter": "^15.4.4",
     "redux": "^4.1.1",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
