--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^6.0.1",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
+    "react-github-btn": "^1.2.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "file:../node_modules/react-scripts",
