--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-selection-box",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A beautiful and responsive Select Input control for ReactJS with singleselect, multiselect, rangeselect and autocomplete (async) support.",
   "author": "MostafaRostami72",
   "license": "MIT",
   "repository": "MostafaRostami72/react-selection-box",
+  "homepage": "https://mostafarostami72.github.io/react-selection-box/",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -24,7 +25,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": ">17.0.0"
+    "react": ">16.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
