--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "engines": {
     "node": ">=10"
   },
+  "types": "dist/react-selection-box.d.ts",
   "scripts": {
-    "build": "microbundle-crl --css-modules false --format modern,cjs",
+    "build": "npm-run-all build2 copy:types",
     "start": "microbundle-crl watch --no-compress --css-modules false --format modern,cjs",
+    "build2": "microbundle-crl --css-modules false --format modern,cjs",
+    "copy:types": "cp ./react-selection-box.d.ts ./dist --parents",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
